--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "motion": "^12.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-creative-cursor": "^1.2.7",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
